Rival page (#249)
* Update Rival Page

* Update Derived Stats

* Update Rival Skill Card

* Update Rival Skill Card and Ratings

* Add Armor Creation

* Update Rival Armor Table

* Create Soak and Defense Cards

* Move API calls out of modifiers and qualities

* Add Qualities and Modifiers to Custom Armor

* Update Rival Armor Page

* Update Rival Armor Page

* Create Weapon Dialog

* Add Weapon Dialog

* Equip Weapon Dialog

* Weapon Table Finalized

* Weapon Table Finalized

* Rival Ability Card

* Update Ability Card

* Remove Skill Table

* Start Talent Card

* Start Talent Card

* Update Select Default

* Update Talent and Ability Cards

* Resolve Custom Weapons and Armor

* Remove old imports