@@ -13,8 +13,6 @@ import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
-import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 public class RivalService {
@@ -23,24 +21,34 @@ public class RivalService {
     private final SkillService skillService;
 
     public Flux<Rival> getAllRivals() {
-        return rivalRepository.findAll();
+        return rivalRepository.findAll().map(rival -> {
+            rival.getTotalSoak();
+            rival.getTotalMeleeDefense();
+            rival.getTotalRangedDefense();
+            return rival;
+        });
     }
 
-    public Mono<Rival> getRival(final String name) {
-        return rivalRepository.findById(name);
+    public Mono<Rival> getRival(final String id) {
+        return rivalRepository.findById(id).map(rival -> {
+            rival.getTotalSoak();
+            rival.getTotalMeleeDefense();
+            rival.getTotalRangedDefense();
+            return rival;
+        });
     }
 
     public Mono<Rival> createRival(final String rivalName) {
         return skillService.getSkillsForCurrentCampaign()
                 .flatMap(skills -> {
                     final Rival rival = new Rival(new SingleNonPlayerActor(new NonPlayerActor(new Actor(rivalName))));
-                    rival.setSkills(skills.stream().map(ActorSkill::new).collect(Collectors.toList()));
+                    rival.setSkills(skills.stream().map(ActorSkill::new).toList());
                     return rivalRepository.save(rival);
                 });
     }
 
-    public Mono<Rival> updateRival(final String name, final Rival rival) {
-        return rivalRepository.findById(name).map(riv -> {
+    public Mono<Rival> updateRival(final String id, final Rival rival) {
+        return rivalRepository.findById(id).map(riv -> {
             riv.setBrawn(rival.getBrawn());
             riv.setAgility(rival.getAgility());
             riv.setIntellect(rival.getIntellect());
@@ -58,5 +66,13 @@ public class RivalService {
             riv.setArmors(rival.getArmors());
             return riv;
         }).flatMap(rivalRepository::save);
+    }
+
+    public Mono<Rival> updateRivalSkill(final String id, final ActorSkill skill) {
+        return rivalRepository.findById(id).flatMap(rival -> {
+            rival.getSkills().stream().filter(actorSkill -> actorSkill.getId().equals(skill.getId()))
+                    .forEach(actorSkill -> actorSkill.setRanks(skill.getRanks()));
+            return rivalRepository.save(rival);
+        });
     }
 }
